--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,18 +3,18 @@
     Options +FollowSymLinks -Indexes
     RewriteEngine on
     
+    RewriteCond $1 !^(index\.php|js|css|themes|images|robots\.txt)
+    
     # Send request via index.php (again, not if its a real file or folder)
     RewriteCond %{REQUEST_FILENAME} !-f
     # RewriteCond %{REQUEST_FILENAME} !-d
     
-    RewriteCond $1 !^(index\.php|js|css|themes|images|robots\.txt)
-    
     <IfModule mod_php5.c>
-        RewriteRule ^(.*)$ index.php/$1 [L]
+        RewriteRule ^(.*)$ index.php/$1 [L,QSA]
     </IfModule>
 
     <IfModule !mod_php5.c>
-        RewriteRule ^(.*)$ index.php?/$1 [L]
+        RewriteRule ^(.*)$ index.php?/$1 [L,QSA]
     </IfModule>
 
 </IfModule>
